infra/aws/cloudformation.yml
AWSTemplateFormatVersion: "2010-09-09"

Description: example-prod-foobar

#======================
# パラメーター
#======================
Parameters:

# プロジェクト名を入力する。各リソースのNameタグの値となる。
  EnvironmentName:
    Type: String
    Default: example-prod-foobar

# VPCのCIDRレンジ
  VpcCIDR:
    Type: String
    Default: 172.31.0.0/16

# パブリックサブネット1
  PublicSubnet1CIDR:
    Type: String
    Default: 172.31.0.0/20

# パブリックサブネット2
  PublicSubnet2CIDR:
    Type: String
    Default: 172.31.16.0/20

# プライベートサブネット1
  PrivateSubnet1CIDR:
    Type: String
    Default: 172.31.48.0/20

# プライベートサブネット2
  PrivateSubnet2CIDR:
    Type: String
    Default: 172.31.64.0/20

# ドメイン名を入力する
  DomainName:
    Type: String
    Default: nakama-ec-api.click

# Cluster名を入力する
  ClusterName:
    Type: String
    Default: example-prod-foobar-cluster

# データベースに接続するパスワードを入力する
  DatabasePassword:
    Type: String
    NoEcho: "true"
    Default: password

# デプロイするコンテナイメージのタグを指定する。デフォルトはlatest.
  ApplicationImageTag:
    Type: String
    Default: latest

# キーペアの名前
  Keypairname:
    Type: AWS::EC2::KeyPair::KeyName
    Default: nakama

# ECSコンテナインスタンスの最新のAMIのIDを取得する
  ApplicationImageId:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id

#サービスが実行するタスクの数を指定する
  DesiredCount:
    Type: String
    Default: 1

#======================
# リソース
#======================

Resources:

# #======================
# ##### S3 #####
# #======================

# # ALBアクセスログ保存用S3バケット作成
#   ALBAccessLogS3Bucket:
#     Type: AWS::S3::Bucket
#     Properties:
#       BucketName: example-prod-foobar-alb-access-log-by-nakama
#       BucketEncryption:
#         ServerSideEncryptionConfiguration:
#           - ServerSideEncryptionByDefault:
#               SSEAlgorithm: AES256
#       AccessControl: Private
#       LifecycleConfiguration:
#         Rules:
#         - Id: LifeCycleRule
#           Status: Enabled
#           ExpirationInDays: 90
#       Tags:
#         - Key: Name
#           Value: example-prod-foobar-alb-access-log-by-nakama

# # ALBアクセスログ保存用S3バケットポリシー作成
#   ALBAccessLogS3BucketPolicy:
#     Type: AWS::S3::BucketPolicy
#     Properties:
#       Bucket: !Ref ALBAccessLogS3Bucket
#       PolicyDocument: {
#         "Version": "2012-10-17",
#         "Statement": [
#           {
#             "Effect": "Allow",
#             "Principal": {
#               "AWS": "arn:aws:iam::142144853887:user/administrator"
#             },
#             "Action": "s3:PutObject",
#             "Resource": "arn:aws:s3:::example-prod-foobar-alb-access-log-by-nakama/*"
#           },
#           {
#             "Effect": "Allow",
#             "Principal": {
#               "Service": "delivery.logs.amazonaws.com"
#             },
#             "Action": "s3:PutObject",
#             "Resource": "arn:aws:s3:::example-prod-foobar-alb-access-log-by-nakama/*",
#             "Condition": {
#               "StringEquals": {
#                 "s3:x-amz-acl": "bucket-owner-full-control"
#               }
#             }
#           },
#           {
#             "Effect": "Allow",
#             "Principal": {
#               "Service": "delivery.logs.amazonaws.com"
#             },
#             "Action": "s3:GetBucketAcl",
#             "Resource": "arn:aws:s3:::example-prod-foobar-alb-access-log-by-nakama"
#           },
#         ]
#       }

#======================
##### ACM #####
#======================

# 証明書作成
  ACM:
    Type: AWS::CertificateManager::Certificate
    Properties:
      DomainName: !Ref DomainName
      DomainValidationOptions:
        - DomainName: !Ref DomainName
          HostedZoneId: Z06376351PERTY5W4JDAZ
      ValidationMethod: DNS
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-acm

#======================
##### Route53 #####
#======================

# 検証用のALIASレコード作成
  Route53:
    Type: AWS::Route53::RecordSet
    Properties:
      AliasTarget:
        DNSName: !Sub ${ApplicationLoadBalancer.DNSName}
        EvaluateTargetHealth: true
        HostedZoneId: !GetAtt ApplicationLoadBalancer.CanonicalHostedZoneID
      Name: !Ref DomainName
      Type: A
      HostedZoneId: Z06376351PERTY5W4JDAZ

#======================
##### VPC #####
#======================

# VPC作成
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName

# インターネットゲートウェイ作成
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName

# インターネットゲートウェイをVPCにアタッチする
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

# パブリックサブネット1を作成
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-public-subnet-1

# パブリックサブネット2を作成
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs  '' ]
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-public-subnet-2

# プライベートサブネット1を作成
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs  '' ]
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-private-subnet-1

# プライベートサブネット2を作成
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs  '' ]
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-private-subnet-2

# ルートテーブル（パブリックサブネット用共通）作成
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-public-routes

# ルートテーブル（パブリックサブネット用共通）にインターネットゲートウェイへのルートを作成
  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

# ルートテーブル（パブリックサブネット用共通）とパブリックサブネット1を紐付ける
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

# ルートテーブル（パブリックサブネット用共通）とパブリックサブネット2を紐付ける
  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

# ルートテーブル（プライベートサブネット用共通）作成
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-private-routes

# ルートテーブル（プライベートサブネット用共通）とプライベートサブネット1を紐付ける
  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet1

# ルートテーブル（プライベートサブネット用共通）とプライベートサブネット2を紐付ける
  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet2

# NATGatewayをパブリックサブネットに作成
  NatGatewayPublic1:
    Type: AWS::EC2::NatGateway
    DependsOn: EIP
    Properties:
      AllocationId:
          Fn::GetAtt:
          - EIP
          - AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-nat-gateway-1

# NATGateway用のElasticIPを作成
  EIP:
    Type: AWS::EC2::EIP
    Properties:
        Domain: vpc

# ルートテーブル（プライベートサブネット用共通）にNATGatewayへのルートを作成
  PrivateRoute:
    Type: AWS::EC2::Route
    DependsOn: NatGatewayPublic1
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayPublic1

# セキュリティグループ（Web）
  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${EnvironmentName}-web
      GroupDescription: Web Security Group
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-web

# セキュリティグループ（VPC）
  VpcSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${EnvironmentName}-vpc
      GroupDescription: VPC Security Group
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: !Ref VpcCIDR
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-vpc

#======================
##### ALB #####
#======================

# ALB作成
  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub ${EnvironmentName}-alb
      Scheme: internet-facing
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      SecurityGroups:
        - !Ref WebSecurityGroup
        - !Ref VpcSecurityGroup
      # LoadBalancerAttributes:
      #   - Key: access_logs.s3.enabled
      #     Value : true
      #   - Key: access_logs.s3.bucket
      #     Value : !Ref ALBAccessLogS3Bucket
      #   - Key: access_logs.s3.prefix
      #     Value : example-prod-foobar-alb-access-log-by-nakama
      Type: application
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-alb

# ALBのリスナー作成(HTTPS)
  ApplicationLoadBalancerHttpsListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      Certificates:
        CertificateArn: !Ref ACM
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Protocol: HTTPS
      Port: 443
      SslPolicy: ELBSecurityPolicy-2016-08
      DefaultActions:
        - Type: fixed-response
          FixedResponseConfig:
            ContentType: text/plain
            MessageBody: Fixed response content.
            StatusCode: 200

# ALBのリスナー作成(HTTP)
  ApplicationLoadBalancerHttpsListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Protocol: HTTP
      Port: 80
      DefaultActions:
        - Type: redirect
          RedirectConfig:
            Protocol: HTTPS
            Port: 443
            StatusCode: HTTP_301
